--- a/python/main.ipynb
+++ b/python/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,20 +621,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chicken\n",
-      "Recommended Products (parent_asin):  {'B08PCWL4BF': 'Chicken Toy for Hens with Mirrors Chicken Wood Mirror Toy with Tinsel, Stainless Steel Chicken Hanging Mirror Drum Toy for Chicks Hens Roosters', 'B08DNX9ZV8': 'MEWTOGO 2 Pack Chicken Swing- Natural Wooden Chicken Perch Toy Handmade Chicken Stand Toy Chicken Coop Accessories for Chicken Hens Medium&Large Bird Parrot Training', 'B08G49DMFH': 'CooShou Pet Chicken Harness Leash Outside Walking Harness Leash for Hens Roosters Ajustable Harness Suitable for Chicken, Duck or Goose 2 Sizes to Choose S', 'B09167ZQKT': 'Vehomy Chicken Xylophone Toy and 2PCS Chicken Veggies Skewers Fruit Holder Chicken Vegetable Hanging Feeder Chicken Toys for Hens 3Pcs', 'B08Z43SXVY': 'vomvomp Chicken Toys with Chicken Doll Arms for Chickens Hens (Skin Colour)', 'B08VJ8FB7M': 'LeerKing 2 Pcs Chicken Toys for Coop Vegetable Hanging Feeder Poultry Fruit Veggies Skewer Holder Cabbage String Bag Treat Chewing Foraging Toys for Hens Goose Duck Birds', 'B0995LHNJJ': 'LALFPET Chicken Xylophone Toys with 8 Metal Keys,Suspensible Wood Toy for Hen,2PCS Chicken Veggies Skewer Fruit Holder with Grinding Stone', 'B092LYKD7R': 'Sfcddtlg 4PCS Xylophone Chicken Toy-Chicken Veggies Skewer Fruit Holder-Stainless Steel Hanging Feeder Toy for Hens Chicken Pet Treating Tool(4pcs)', 'B09SDHYNK9': 'Petlewa Buffalo Wilderness Soft Moist, Grain Free, Cat Treats, Variety Pack - 3 Flavors 2 Pack ( Chicken & Trout, Chicken & Salmon, Chicken & Turkey) - 2 Oz', 'B095KG7JF8': 'Tsin 4PCS Chicken Xylophone Toy for Hens,Chicken Mirror Toy with Bell,Chicken Feeding Tool Veggies Skewer Fruit Holder, Hanging Feeder for Poultry Hens Duck Goose'}\n"
+      "plushie\n",
+      "Recommended Products (parent_asin):  {'B09P49BPM7': \"Cheeki Studios 'Pawsent Plushie' Dog Toys - Birthday Surprise Interactive Present Plush Gift (Mint)\", 'B09SZ9N737': 'Carrot Plushie Dog Toy, Carrot Dog Toy, Vegetable Dog Toy, Dog Toy Plush Vegetable, Carrot Toy', 'B083PWDNCD': 'ZippyPaws - NomNomz Plush Squeaker Dog Toy for The Foodie Pup - Chips', 'B07FCVDNLQ': 'ZippyPaws Hedgehog Small', 'B0080PMW1W': 'STAR WARS Dog Toys - Officially Licensed Pet Squeaker Toys- Set Of 3 Interactive Plush Dog & Puppy Squeaker Chew Toys - The Mandalorian Mando, Grogu The Child & Sorgan Frog Squeakers For Light Chewers', 'B093GPP5TK': 'IML Pusheen PUH050APPT-ONE Donut Cat Toy Hanging Scratcher', 'B096BF9LRD': 'AmazinglyCat Dancing Fish Cat Toy + The Flopping Lobster (Bundle)', 'B0055UCFI0': 'Trapping Coyote Tail with Ball Chain', 'B09BC9GCX4': 'FzzPetDC Catnip Toys for Indoor Cats,6 Pcs Natural Silvervine Sticks Cat Toys for Indoor Cats Interactive,Cleaning Teeth Molar Tools Matatabi Cat Chew Toy,Cat chew Toy,Kitten Toys,Suitable for All Cat', 'B005J6TULU': 'Best Pet 3 Door Pet Cage, 55-Inch for Giant Breeds, Pink'}\n"
      ]
     }
    ],
    "source": [
-    "user_query = \"chicken\"\n",
+    "user_query = \"plushie\"\n",
     "user_query = preprocess(user_query)\n",
     "print(user_query)\n",
     "recommended_asins = recommend_products(user_query, tfidf_matrix, meta_df_sample, top_n=10)\n",
